aligning on browser resize, hovering for navbar, sticky navbar

--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -25,7 +25,7 @@
 	--color-primary-500: 0 178 169; /* ⬅ #00B2A9 */
 	--color-primary-600: 0 160 152; /* ⬅ #00a098 */
 	--color-primary-700: 0 134 127; /* ⬅ #00867f */
-	--color-primary-800: 0 107 101; /* ⬅ #006b65 */
+	--color-primary-800: 0 107 101; /* ⬅ #00867f */
 	--color-primary-900: 0 87 83; /* ⬅ #005753 */
 	/* secondary | #EF426F */
 	--color-secondary-50: 253 227 233; /* ⬅ #fde3e9 */
