Added Albert_Sans font - not a big fan so will leave alone for now

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,3 +3,11 @@ html,
 body {
 	@apply h-full overflow-hidden;
 }
+
+@font-face {
+	/* Reference name */
+	font-family: 'Albert_Sans';
+	/* For multiple files use commas, ex: url(), url(), ... */
+	src: url('/fonts/Albert_Sans/AlbertSans-VariableFont_wght.ttf'), url('/fonts/Albert_Sans/AlbertSans-Italic-VariableFont_wght.ttf');
+}
+						
